# gpn19-visuals

./: CMakeLists.txt  README.md  t.c
font/: font.h
gfx/: boxplane.frag  broccoli.frag  chips.frag  decayingfactory.frag  doublependulum.frag  fogforest.frag  hexagontunnel.frag  midikeyboard.frag  post.frag  post.h  startunnel.frag  supershape_tricks.frag  symbols.h  team210_logo.frag  voronoinet.frag  wursttunnel.frag
gfx/symbols/: dlogo210.frag  dspline3.frag  rot3.frag
